Updating layout issues noticed on IPAD

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -81,7 +81,7 @@ footer .bottom {
   #header .logo {
         display: inline-block;	
         height: 50px;
-        width: 450px;	
+        width: 475px;	
         line-height: 50px;
         float: left;    
         font-family: "Nothing You Could Do";
@@ -271,11 +271,13 @@ footer .bottom {
 .community .container .row div { margin: 100px 0px; }
 
 .community h2 {   
+    width: 100%; 
     height: 2em; 
     line-height: 2em; 
-    font-size: 2em;     
+    font-size: 175%;     
     text-shadow: 1px 1px 0px gray;    
     font-family: "Nothing you could do";
+    text-align: center;
 }
 
 .community p {   
@@ -575,9 +577,12 @@ footer .bottom {
         font-weight: 700; 
         width: auto;  text-align: center;
     }
+        
     .community p { color: dimgray; }
     .community .container .row div:last-of-type p  { color: white; font-weight: 700; }
+      
     .events { display: none;  }      
+    
     
     footer .contact p { padding-top: 20px; font-weight: 100; font-size: 125%;  }
         
